test_output.log
   Compiling glyim-hir v0.5.0 (/Users/adm/Documents/Repos/glyim/crates/glyim-hir)
   Compiling glyim-codegen-llvm v0.5.0 (/Users/adm/Documents/Repos/glyim/crates/glyim-codegen-llvm)
   Compiling glyim-macro-core v0.5.0 (/Users/adm/Documents/Repos/glyim/crates/glyim-macro-core)
   Compiling glyim-typeck v0.5.0 (/Users/adm/Documents/Repos/glyim/crates/glyim-typeck)
   Compiling glyim-doc v0.5.0 (/Users/adm/Documents/Repos/glyim/crates/glyim-doc)
   Compiling glyim-lint v0.5.0 (/Users/adm/Documents/Repos/glyim/crates/glyim-lint)
   Compiling glyim-pkg v0.5.0 (/Users/adm/Documents/Repos/glyim/crates/glyim-pkg)
   Compiling glyim-cas-server v0.5.0 (/Users/adm/Documents/Repos/glyim/crates/glyim-cas-server)
   Compiling glyim-cli v0.5.0 (/Users/adm/Documents/Repos/glyim/crates/glyim-cli)
error[E0061]: this enum variant takes 1 argument but 2 arguments were supplied
   --> crates/glyim-cli/tests/integration.rs:322:47
    |
322 |     let summary = pipeline::run_tests(&input, Some("b", false), false, None).unwrap();
    |                                               ^^^^      ----- unexpected argument #2 of type `bool`
    |
note: tuple variant defined here
   --> /Users/adm/.rustup/toolchains/nightly-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/option.rs:608:5
    |
608 |     Some(#[stable(feature = "rust1", since = "1.0.0")] T),
    |     ^^^^
help: remove the extra argument
    |
322 -     let summary = pipeline::run_tests(&input, Some("b", false), false, None).unwrap();
322 +     let summary = pipeline::run_tests(&input, Some("b"), false, None).unwrap();
    |

error[E0061]: this function takes 5 arguments but 4 arguments were supplied
   --> crates/glyim-cli/tests/integration.rs:322:19
    |
322 |     let summary = pipeline::run_tests(&input, Some("b", false), false, None).unwrap();
    |                   ^^^^^^^^^^^^^^^^^^^--------------------------------------- argument #5 of type `bool` is missing
    |
note: function defined here
   --> crates/glyim-cli/src/pipeline.rs:595:8
    |
595 | pub fn run_tests(
    |        ^^^^^^^^^
help: provide the argument
    |
322 |     let summary = pipeline::run_tests(&input, Some("b", false), false, None, /* bool */).unwrap();
    |                                                                            ++++++++++++

error[E0061]: this enum variant takes 1 argument but 2 arguments were supplied
   --> crates/glyim-cli/tests/integration.rs:330:46
    |
330 |     let result = pipeline::run_tests(&input, Some("nonexistent", false), false, None);
    |                                              ^^^^                ----- unexpected argument #2 of type `bool`
    |
note: tuple variant defined here
   --> /Users/adm/.rustup/toolchains/nightly-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/option.rs:608:5
    |
608 |     Some(#[stable(feature = "rust1", since = "1.0.0")] T),
    |     ^^^^
help: remove the extra argument
    |
330 -     let result = pipeline::run_tests(&input, Some("nonexistent", false), false, None);
330 +     let result = pipeline::run_tests(&input, Some("nonexistent"), false, None);
    |

error[E0061]: this function takes 5 arguments but 4 arguments were supplied
   --> crates/glyim-cli/tests/integration.rs:330:18
    |
330 |     let result = pipeline::run_tests(&input, Some("nonexistent", false), false, None);
    |                  ^^^^^^^^^^^^^^^^^^^------------------------------------------------- argument #5 of type `bool` is missing
    |
note: function defined here
   --> crates/glyim-cli/src/pipeline.rs:595:8
    |
595 | pub fn run_tests(
    |        ^^^^^^^^^
help: provide the argument
    |
330 |     let result = pipeline::run_tests(&input, Some("nonexistent", false), false, None, /* bool */);
    |                                                                                     ++++++++++++

For more information about this error, try `rustc --explain E0061`.
error: could not compile `glyim-cli` (test "integration") due to 4 previous errors
warning: build failed, waiting for other jobs to finish...
error: command `/Users/adm/.rustup/toolchains/nightly-aarch64-apple-darwin/bin/cargo test --no-run --message-format json-render-diagnostics --workspace` exited with code 101
